# contena

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml
configs/: backtest.example.yaml  dryrun.example.yaml  wfo.example.yaml
configs/strategies/: example_sma.yaml
docker/: executor.Dockerfile  market-data.Dockerfile  research.Dockerfile
docs/articles/: system-trading-containerization.md
scripts/: run_backtest.sh  run_dryrun.sh  run_wfo.sh
src/contena/: __init__.py  backtest.py  cli.py  config.py  data_seed.py  dryrun.py  live.py  utils.py  wfo.py
tests/: test_mvp.py
